--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "newsletter-bot",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/index.js",
+  "main": "index.js",
   "scripts": {
-    "refresh": "node deploy-commands.js",
-    "dev": "nodemon ./src/index.js"
+    "dev": "node index.js"
   },
   "keywords": [],
   "author": "",
