--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/rest": "^1.3.0",
+    "axios": "^1.1.3",
     "chalk": "^4.1.2",
     "discord-api-types": "^0.37.17",
     "discord.js": "^14.6.0",
